--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body, html {
   width: 100%;
   height: 100%;
@@ -5,6 +6,7 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background: url("../images/white-wood.jpg");
 }
 
 .container, h1 {
@@ -20,20 +22,24 @@ h4 {
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
+  background: linear-gradient(to right, rgb(55, 58, 55) 0%, transparent 100%);
 }
 
 .amiable {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
-
 }
 
 .indifferent {
+  border: 1px solid #dddd22;
+  box-shadow:  -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;
   background-color: #dddd22;
 }
 
 .dubious {
+  border: 1px solid #dd4444;
+  box-shadow:  -1px 1px #dd4444, -2px 2px #dd4444, -3px 3px #dd4444, -4px 4px #dd4444, -5px 5px #dd4444;
   background-color: #dd4444;
 }
 
@@ -45,12 +51,15 @@ h4 {
 .small {
   width: 100%;
   height: 100%;
+  border: 2px solid rgb(3, 3, 3);
 }
 
 .med {
   width: 203.5%;
+  border: 2px solid rgb(3, 3, 3);
 }
 
 .large {
   width: 303%;
+  border: 2px solid rgb(3, 3, 3);
 }
